--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@
 body {
   font-size: 15px;
   font-family: 'Montserrat', sans-serif;
-  background: url(./images/bg-top.svg) no-repeat, url(./images/bg-bottom.svg) no-repeat;
+  background: url(./images/bg-top.svg) no-repeat top right, url(./images/bg-bottom.svg) no-repeat bottom left;
   background-color: var(--Very-Light-Grayish-Blue);
+  height: 100vh;
 }
 
 .container {
@@ -33,12 +34,14 @@ body {
   margin: 0 auto;
 }
 
-
-h1,
-p {
-  color: var(--Dark-Grayish-Blue);
+.plans>div>h1,
+.plans>div>p {
   border-bottom: 1px solid var(--Light-Grayish-Blue);
   padding-bottom: 1.2rem;
+}
+
+.plans>div>h1 {
+  color: var(--Dark-Grayish-Blue);
 }
 
 h2,
@@ -47,17 +50,63 @@ p {
   color: var(--Grayish-Blue);
 }
 
-.monthly {
+h1 {
+  font-size: 3rem;
+  margin: 1rem 0;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+.monthly,
+.annually.active {
   display: none;
+}
+
+.annually,
+.monthly.active {
+  display: block;
 }
 
 .subscription {
   display: flex;
-  margin: 0 0.5rem;
+  margin: 0 0.5rem 1.5rem 0;
+  gap: 1.3rem;
+  align-items: center;
 }
 
 .subscription>p {
   color: var(--Light-Grayish-Blue);
+}
+
+.toggle-switch {
+  position: relative;
+  background: var(--Linear-Gradient2);
+  width: 58px;
+  height: 30px;
+  border-radius: 20px;
+  transition: all 500ms ease-in-out;
+  cursor: pointer;
+}
+
+.toggle-switch:hover {
+  background: var(--Linear-Gradient1);
+}
+
+.circle {
+  position: absolute;
+  background: #fff;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+}
+
+.toggle-switch.active>.circle {
+  left: 51% !important;
 }
 
 .plans {
@@ -95,25 +144,38 @@ p {
 
 .plans>.basic>button,
 .plans>.master>button {
+  margin-top: 1rem;
   padding: .7rem 5rem;
   text-transform: uppercase;
-  background: #fff;
-  color: var(--Linear-Gradient2);
-  outline: none;
-  border: 1px solid var(--Linear-Gradient2);
+  background: linear-gradient(45deg, var(--Linear-Gradient1) 20%, var(--Linear-Gradient2) 100%);
+  color: #fff;
+  border: 1px solid transparent;
   border-radius: 5px;
   cursor: pointer;
   font-weight: 700;
 }
 
+.plans>.basic>button:hover,
+.plans>.master>button:hover {
+  background: #fff;
+  color: var(--Linear-Gradient2);
+  border: 1px solid var(--Linear-Gradient2);
+}
+
 .plans>.pro>button {
+  margin-top: 1rem;
   padding: .7rem 5rem;
   text-transform: uppercase;
-  background: transparent;
-  color: #fff;
-  outline: none;
-  border: 1px solid #fff;
+  background: #fff;
+  color: var(--Linear-Gradient2);
+  border: 1px solid transparent;
   border-radius: 5px;
   cursor: pointer;
   font-weight: 700;
+}
+
+.plans>.pro>button:hover {
+  background: transparent;
+  color: #fff;
+  border: 1px solid #fff;
 }
