--- a/style.css
+++ b/style.css
@@ -179,3 +179,20 @@ h2 {
   color: #fff;
   border: 1px solid #fff;
 }
+
+@media only screen and (min-width: 280px) and (max-width: 769px) {
+  body {
+    background: var(--Very-Light-Grayish-Blue);
+    background-image: url(./images/bg-top.svg);
+    background-repeat: no-repeat;
+    background-size: 270px;
+    background-position: 210% 0%;
+    position: relative;
+  }
+
+  .plans {
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem 0 5rem 0;
+  }
+}
